<resources>
    <!--App Resources-->
    <string name="app_name">OtterLibrary</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_place_hold">Place Hold</string>

    <!--Main Menu-->
    <string name="button_create_account">Create Account</string>
    <string name="button_place_hold">Place Hold</string>
    <string name="button_cancel_hold">Cancel Hold</string>
    <string name="button_manage_system">Manage System</string>

    <!--Create Account/Login-->
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="button_register">Register</string>
    <string name="toast_account_success">Account Created: </string>
    <string name="toast_account_failure">Failed to create new Account:</string>
    <string name="toast_db_success">Database Updated!</string>
    <string name="toast_db_failure">Account already exists:</string>
    <string name="login">Login</string>
    <string name="login_success">Login Succeeded</string>

    <!--Place Hold-->
    <string name="pickup_date_hint">Pickup Date</string>
    <string name="dropoff_date_hint">Dropoff Date</string>
    <string name="pickup_hint">Set Pickup</string>
    <string name="dropoff">Dropoff</string>
    <string name="pickup">Pickup</string>
    <string name="dropoff_hint">Set Dropoff</string>
    <string name="pickup_time_hint">Pickup Time</string>
    <string name="dropoff_time_hint">Dropoff Time</string>
    <string name="reservation_submit">Submit</string>
    <string name="error_invalid_date">Dropoff is before pickup</string>
    <string name="error_res_too_long">Cannot hold book for more than 7 days</string>
    <string name="error_res_invalid">Cannot hold book at this time</string>
    <string name="hold_success">Hold Requested</string>
    <string name="choose_time">Choose Time</string>
    <string name="no_logs">No logs to show</string>

    <!--Confirmation-->
    <string name="confirm_dialog" formatted="false">
        Reservation for: %s\n
        Title: %s by %s\n
        Price per hour: $%.2f\n\n
        Pickup: %s \n
        Dropoff: %s \n
        <b>Total: $%.2f</b>
    </string>
    <string name="cancel">Cancel</string>
    <string name="toast_hold_success">Hold Created</string>
    <string name="toast_hold_cancel">Hold Cancelled</string>

    <string name="cancel_hold">Cancel Hold</string>
    <string name="no_books">No books to show</string>

    <!--Make new book-->
    <string name="make_book">Create Book</string>
    <string name="made_book">Books Updated</string>
    <string name="hint_title">Book Title</string>
    <string name="hint_author">Book Author</string>
    <string name="hint_isbn">Book ISBN</string>
    <string name="hint_fee">Book Fee</string>
    <string name="error_noinfo">Book Info Missing</string>
    <string name="error_title">Book already exists</string>

    <!--Other-->
    <string name="not_admin">Not the admin!</string>
    <string name="make_new_book">Create new book</string>
</resources>
