<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_place_hold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csumb.scd.otterlibrary.PlaceHold">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pickupLabel" />

        <TextView
            android:text="@string/pickup_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pickupText"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:onClick="setTime"/>

        <TextView
            android:text="@string/dropoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dropoffLabel" />

        <TextView
            android:text="@string/dropoff_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dropoffText"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:onClick="setTime"/>

        <Button
            android:text="@string/button_place_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bSubmit"
            android:onClick="submitReservation"/>
    </LinearLayout>
</RelativeLayout>
