<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csumb.scd.otterlibrary.MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bCreateAccount"
            android:text="@string/button_create_account"
            android:onClick="launchActivity" />

        <Button
            android:text="@string/button_place_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bPlaceHold"
            android:onClick="launchActivity" />

        <Button
            android:text="@string/button_cancel_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bCancelHold"
            android:onClick="launchActivity" />

        <Button
            android:text="@string/button_manage_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bManageSystem"
            android:onClick="launchActivity" />

    </LinearLayout>
</RelativeLayout>
